Correct jangy linespacing with code elements

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -110,6 +110,7 @@ cite, em, i {
 code {
   font-family: Menlo, Monaco, "Droid Sans Mono", Courier, "Courier New", monospace;
   font-size: 0.88em;
+  line-height: 1;
   hyphens: none;
 }
 
